#948| 1) Change Registration/Enrolment/Encounter location to Registration/Enrolment/Encounter coordinates   2) Provide a better error message when the location does not exist or the addressleveltype does not exist